fix: CORS 白名单统一配置，Nginx HTTPS 模板与 Caddy 示例
删除 Profile 专用 CorsConfig，SecurityConfig 启用 allowCredentials；生产可快速启用 443 或改用 Caddy 自动证书。